<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FofrMetro Praha</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="line_a">A</string>
    <string name="line_b">B</string>
    <string name="line_c">C</string>
    <string name="line_d">D</string>
    <string name="direction">Direction</string>
    <string name="destination">Destination</string>
    <string name="choose_exit">Choose</string>
    <string name="show_all_exits">Show all exits</string>

</resources>
