<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="eu.zaantar.fofrmetro.MainActivity" >

    <!-- LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" -->

        <RadioGroup
            android:id="@+id/metroLineSelection"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" >

            <ToggleButton
                android:id="@+id/lineAToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/line_a"
                android:textOn="@string/line_a" 
                android:checked="true"
                android:onClick="onToggle"/>

            <ToggleButton
                android:id="@+id/lineBToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/line_b"
                android:textOn="@string/line_b"
                android:onClick="onToggle" />

            <ToggleButton
                android:id="@+id/lineCToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/line_c"
                android:textOn="@string/line_c" 
                android:onClick="onToggle"/>

            <ToggleButton
                android:id="@+id/lineDToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:textOff="@string/line_d"
                android:textOn="@string/line_d"
                android:onClick="onToggle" />

        </RadioGroup>

        <android.support.v7.widget.Space
            android:id="@+id/space1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/directionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direction"
            android:textAppearance="?android:attr/textAppearanceMedium" />

   <RadioGroup
       android:id="@+id/directionSelection"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content" >

       <RadioButton
           android:id="@+id/direction1Radio"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:checked="true"
           android:text="RadioButton" />

       <RadioButton
           android:id="@+id/direction2Radio"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="RadioButton" />
   </RadioGroup>

   <TextView
       android:id="@+id/destinationTextView"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/destination"
       android:textAppearance="?android:attr/textAppearanceMedium" />

   <Spinner
       android:id="@+id/destinationSpinner"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content" />

   <Button
       android:id="@+id/showAllExitsButton"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/show_all_exits" />

   <TextView
       android:id="@+id/chooseExitTextView"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/choose_exit"
       android:textAppearance="?android:attr/textAppearanceMedium" />

   <Spinner
       android:id="@+id/exitChoiceSpinner"
       android:layout_width="match_parent"
       android:layout_height="wrap_content" />

   <TextView
       android:id="@+id/exit1TextView"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="Large Text"
       android:textAppearance="?android:attr/textAppearanceLarge" />

   <TextView
       android:id="@+id/exit2TextView"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="Large Text"
       android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>